fix: Actually using s3 backend storage now
